[package]
name = "dungeoncrawl"
version = "0.1.0"
authors = ["Ray <vecum0814@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
legion = "=0.3.1"        
serde = { version = "=1.0.115" }
serde_json = "1.0.66"

